--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@ Released under the MIT license: http://jsbin.mit-license.org
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
+  <title>Benton Garrett</title>
   
   <script src="https://code.jquery.com/jquery.min.js"></script>
   <link href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" />
