--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ Released under the MIT license: http://jsbin.mit-license.org
 
 body {
   font-family: "PT Sans";
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
 
 a:link {
