--- a/index.html
+++ b/index.html
@@ -145,6 +145,39 @@
                           <img src="https://s11.postimg.org/l9okvomkj/weather.png" class="img-responsive" alt="">
                       </a>
                   </div>
+                  <div class="col-sm-4 portfolio-item">
+                      <a href="http://codepen.io/bentongarrett/full/NAEJZG/" class="portfolio-link" data-toggle="modal" target="_blank">
+                          <div class="caption">
+                              <div class="caption-content">
+                                <h4>Tic-Tac-Toe</h4>
+                                <p></p>
+                              </div>
+                          </div>
+                          <img src="" class="img-responsive" alt="">
+                      </a>
+                  </div>
+                  <div class="col-sm-4 portfolio-item">
+                      <a href="http://codepen.io/bentongarrett/full/pbrKYb/" class="portfolio-link" data-toggle="modal" target="_blank">
+                          <div class="caption">
+                              <div class="caption-content">
+                                <h4>ANDROID SAYS</h4>
+                                <p></p>
+                              </div>
+                          </div>
+                          <img src="https://s13.postimg.org/67v1o9l6f/androidsays.png" class="img-responsive" alt="">
+                      </a>
+                  </div>
+                  <div class="col-sm-4 portfolio-item">
+                      <a href="http://codepen.io/bentongarrett/full/NAEJZG/" class="portfolio-link" data-toggle="modal" target="_blank">
+                          <div class="caption">
+                              <div class="caption-content">
+                                <h4>Tic-Tac-Toe</h4>
+                                <p></p>
+                              </div>
+                          </div>
+                          <img src="" class="img-responsive" alt="">
+                      </a>
+                  </div>
               </div>
           </div>
       </section>
