--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="#" id = "projects-link">Projects</a>
+          <a href="#" id = "projects-link">Portfolio</a>
         </li>
         <li>
           <a href="#" id = "about-link">About</a>
