--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
       <div class="row">
         <div id="description" class="col-md-4 col-sm-4">
           <h3>Description</h3>
-          <p>I am a senior at the University of Idaho with a double major in business information systems and human resources management. During my time at the University, I have cultivated professional skills for the workplace that complement the knowledge I have independently gained in the realm of web development.</p>
-          <p>In December, I will complete my education at the University and wish to relocate nearly anywhere!</p>
+          <p>I am a recent University of Idaho graduate with degrees in business information systems and human resources management. During my time at the University, I have cultivated professional skills for the workplace that complement the knowledge I have independently gained in the realm of web development.</p>
+
           <p>Moving forward, I hope to expand my horizons further in a career that allows me to continue the pursuit of excellence in all things. For any and all inquiries, feel free to contact me via LinkedIn or my email address below.</p>
         </div>
         <div id="education" class="col-md-4 col-sm-4">
