--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
   <div id="welcome" class="row">
     <div class = "col-md-12 col-sm-12">
       <h1>Hello!</h1>
-      <img src= "https://s13.postimg.org/gvm0q2u7b/196e023.jpg">
+      <img src = "https://s30.postimg.org/ehsk7nd35/IMG_0241.jpg">
     </div>
     <div class="col-md-12 col-sm-12">
       <h1>I'm Benton.</h1>
-      <h3>University of Idaho Senior - Aspiring Web Developer </h3>
+      <h3>Recent College Graduate - Aspiring Web Developer </h3>
     </div>
   </div>
   <!-- /.row -->
@@ -189,7 +189,6 @@
         <div id="description" class="col-md-4 col-sm-4">
           <h3>Description</h3>
           <p>I am a recent University of Idaho graduate with degrees in business information systems and human resources management. During my time at the University, I have cultivated professional skills for the workplace that complement the knowledge I have independently gained in the realm of web development.</p>
-
           <p>Moving forward, I hope to expand my horizons further in a career that allows me to continue the pursuit of excellence in all things. For any and all inquiries, feel free to contact me via LinkedIn or my email address below.</p>
         </div>
         <div id="education" class="col-md-4 col-sm-4">
