--- a/index.html
+++ b/index.html
@@ -188,20 +188,26 @@
       <div class="row">
         <div id="description" class="col-md-4 col-sm-4">
           <h3>Description</h3>
-          <p>I am a recent University of Idaho graduate with degrees in business information systems and human resources management. During my time at the University, I have cultivated professional skills for the workplace that complement the knowledge I have independently gained in the realm of web development.</p>
+          <p>I am a recent University of Idaho graduate with degrees in business information systems and human resources management. During my time at the University, I cultivated professional skills for the workplace that complement the knowledge I have independently gained in the realm of web development.</p>
           <p>Moving forward, I hope to expand my horizons further in a career that allows me to continue the pursuit of excellence in all things. For any and all inquiries, feel free to contact me via LinkedIn or my email address below.</p>
         </div>
         <div id="education" class="col-md-4 col-sm-4">
           <h3>Education</h3>
-          <h4>University of Idaho (2013 - December 2016)</h4>
+          <h4>University of Idaho (2013 - Dec 2016)</h4>
           <ul>
-            <li>Bachelor's in Business - Information Systems</li>
-            <li>Bachelor's in Business - Human Resources Management</li>
+            <li><b>Bachelor's in Business</b></li>
+            <ul>
+              <li>Information Systems</li>
+              <li>Human Resources Management</li>
+            </ul>
           </ul>
-          <h4>Free Code Camp (February 2016 - ongoing)</h4>
+          <h4>Free Code Camp (Feb 2016 - Sept 2016)</h4>
           <ul>
-            <li>HTML, CSS, Javascript</li>
-            <li>Bootstrap, jQuery</li>
+            <li><b>Front-End Web Development Certificate</b></li>
+            <ul>
+              <li>HTML, CSS, Javascript</li>
+              <li>Bootstrap, jQuery</li>
+            </ul>
           </ul>
         </div>
         <div id="experience" class="col-md-4 col-sm-4">
@@ -254,10 +260,10 @@
 </body>
 
   </html>
-    <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+<script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
 <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
 
-        <script src="js/index.js"></script>
+<script src="js/index.js"></script>
 
 
 
